# sequence_analysis

./: .gitignore  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: format.yml  pip.yml  wheels.yml
examples/: cluster_ex.py  dna_to_protein.py  fasta_IO_test.py  needleman_wunsch.py  smith_waterman.py
examples/example_files/: dna_ex.fasta  new_test.fasta  sample_dna.fasta
sequence_analysis/: .sequence.py.swp  __init__.py  consensus.py  easy_search.py  genbank_entry.py  genome_map.py  gibbs_sampler.py  msa.py  open_reading_frame.py  pairwise_aligner.py  pairwise_alignment.py  ppe.py  sam_entry.py  sam_file.py  sam_reader.py  seq_match.py  seq_set.py  sequence.py  star_map.py  tree.py  utils.py
src/: fasta_iterator.cpp  fasta_reader.cpp  genome_map.cpp  includes.hpp  orf.cpp  pair_score.cpp  pair_score.hpp  pairwise_aligner.cpp  profiler.cpp  sam_entry.cpp  sam_file.cpp  sam_filter.cpp  sam_reader.cpp  seq_set.cpp  sequence.cpp  sequence_analysis.cpp  sequence_methods.hpp
src/include/: fasta_iterator.hpp  genome_map.hpp  orf.hpp  pair_score.hpp  pairwise_aligner.hpp  sam_entry.hpp  sam_file.hpp  sam_filter.hpp  seq_set.hpp  sequence.hpp
tests/: .coverage  profiler.json  test_clustering.py  test_consensus.py  test_debug.py  test_easy_search.py  test_fasta_IO.py  test_fasta_iterator.py  test_genbank_entry.py  test_genome_map.py  test_gibbs_sampler.py  test_index_without_gaps.py  test_msa.py  test_orf.py  test_orf_ubb.py  test_pairwise_aligner.py  test_pairwise_alignment.py  test_ppe.py  test_sam_entry.py  test_sam_file.py  test_sam_reader.py  test_seq_match.py  test_seq_set.py  test_seq_set_filters.py  test_sequence.py  test_six_frame_check.py  test_star_map.py  test_tree.py  test_tree_builder.py  test_utils.py
(+57 files in other folders)
